# screensht

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install-deps.sh
src/: area.c  area.h  args.c  args.h  capture.c  capture.h  display_info.c  display_info.h  hosts.c  hosts.h  lock.c  lock.h  log.c  log.h  main.c  save.c  save.h  select.c  select.h  upload.c  upload.h  vec2.c  vec2.h  window_info.c  window_info.h
